# mipc-camera-client-python

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  release.yml
examples/: timelapse.py
mipc_camera_client/: __init__.py  cli.py  crypto_helpers.py
tests/: test_des.py  test_nid.py
